# py-ydotool

./: LICENSE  README.md  justfile  lefthook.yml  mise.toml  pyproject.toml
.diffship/: .gitignore  AI_GUIDE.md  PROJECT_KIT.md  PROJECT_RULES.md  WORKFLOW_PROFILE.md  ai_generated_config.toml  config.toml  forbid.toml
scripts/: check_version.py  set_version.py  version_tools.py
src/py_ydotool/: __init__.py  _version.py  _version_tools.py  client.py  clipboard.py  exceptions.py  keys.py
tests/: test_api.py  test_clipboard.py  test_import.py  test_keys.py  test_mouse_buttons.py  test_versioning.py
